--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
                     android:id="@+id/toolbar_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Shuttlr Demo"
+                    android:text="@string/activity_bar_name"
                     android:layout_gravity="center"
                     android:gravity="center_horizontal"
                     android:textColor="@color/colorGrey"
@@ -53,6 +53,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/icon_username"
+                android:drawableStart="@drawable/icon_username"
                 android:drawableTint="@color/colorBlack"
                 android:hint="User Name"
                 android:inputType="textEmailAddress"
@@ -63,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:drawableLeft="@drawable/icon_lock"
+                android:drawableStart="@drawable/icon_lock"
                 android:drawableTint="@color/colorBlack"
                 android:hint="Password"
                 android:textColorHint="@color/colorGrey"
