--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -12,49 +12,13 @@
 
         tools:context="com.accmxxgmail.shuttlrdemo.MapsActivity" />
 
-    <LinearLayout
-        android:id="@+id/map_activity_top"
+    <fragment
+        android:layout_margin="20dp"
+        android:id="@+id/place_fragment"
+        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginEnd="20dp">
-
-        <EditText
-            android:id="@+id/edit_text_map"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:textSize="16dp"
-            android:gravity="center_vertical"
-            android:paddingStart="10dp"
-            android:paddingLeft="10dp"
-            android:maxLines="1"
-            android:paddingEnd="10dp"
-            android:layout_margin="10dp"
-            android:singleLine="true"
-            android:paddingRight="10dp"
-            android:background="@drawable/format_curved_edge_button_wg"
-            android:backgroundTint="@color/colorWhite"
-            android:hint="Enter a Location"
-            android:textColor="@color/colorBlack"
-            android:drawableRight="@drawable/icon_close"
-            android:drawableTint="@color/colorDarkGrey"
-            android:textColorHint="@color/colorLightGrey">
-            <requestFocus/>
-        </EditText>
-
-        <Button
-            android:layout_width="40dp"
-            android:id="@+id/button_search_map"
-            android:layout_height="40dp"
-            android:backgroundTint="@color/colorBlue"
-            android:background="@drawable/icon_arrow_right_bold_circle"/>
-
-    </LinearLayout>
+        android:background="@drawable/format_curved_edge_button_wg"/>
 
 
     <ImageButton
