--- a/app/src/main/res/layout/activity_successfully_booked.xml
+++ b/app/src/main/res/layout/activity_successfully_booked.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBlue"
     tools:context="com.accmxxgmail.shuttlrdemo.RequestRideActivity">
 
@@ -81,6 +80,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/textViewTodayDate"
                         android:textColor="@color/colorWhite"
                         android:text="Today's Date"
                         android:textSize="20dp"
