--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,8 +81,8 @@
 
             <Button
                 android:id="@+id/button_login"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/medium_button_width"
+                android:layout_height="@dimen/medium_button_height"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="70dp"
@@ -91,7 +91,7 @@
                 android:text="Login"
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
-                android:textSize="22sp" />
+                android:textSize="@dimen/medium_button_text_size" />
 
             <TextView android:id="@+id/link_signup"
                 android:layout_width="fill_parent"
