--- a/app/src/main/res/layout/activity_request_ride.xml
+++ b/app/src/main/res/layout/activity_request_ride.xml
@@ -42,8 +42,9 @@
                 android:layout_centerVertical="true"
                 android:background="@drawable/format_curved_edge_button_wg"
                 android:padding="@dimen/button_padding"
+                android:textAllCaps="false"
                 android:textColor="@color/colorDarkGrey"
-                android:textSize="@dimen/small_text_size"
+                android:textSize="@dimen/medium_button_text_size"
                 android:textOff="@string/string_request_ride_single_trip"
                 android:textOn="@string/string_request_ride_single_trip" />
 
@@ -57,8 +58,9 @@
                 android:layout_centerVertical="true"
                 android:background="@drawable/format_curved_edge_button_wg"
                 android:padding="@dimen/button_padding"
-                android:textSize="@dimen/small_text_size"
+                android:textSize="@dimen/medium_button_text_size"
                 android:textColor="@color/colorDarkGrey"
+                android:textAllCaps="false"
                 android:textOff="@string/string_request_ride_recurring"
                 android:textOn="@string/string_request_ride_recurring"/>
 
@@ -182,6 +184,7 @@
             android:text="@string/book_trip_button_text"
             android:layout_height="@dimen/medium_button_height"
             android:layout_gravity="center"
+            android:textSize="@dimen/medium_button_text_size"
             android:onClick="SuccessfullyBooked"
             android:background="@drawable/format_curved_edge_button_rg"
             android:padding="@dimen/button_padding"
