--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,9 +6,10 @@
     <dimen name="main_car_icon_size">50dp</dimen>
     <dimen name="activity_horizontal_margin">20dp</dimen>
     <dimen name="activity_vertical_margin">20dp</dimen>
-    <dimen name="small_text_size">16sp</dimen>
-    <dimen name="xsmall_text_size">12sp</dimen>
+    <dimen name="medium_button_text_size">18sp</dimen>
+    <dimen name="xsmall_text_size">16sp</dimen>
     <dimen name="subheader_text_size">24sp</dimen>
+    <dimen name="small_text_size">16sp</dimen>
     <dimen name="medium_button_width">150dp</dimen>
     <dimen name="medium_button_height">50dp</dimen>
     <dimen name="button_padding">6dp</dimen>
