--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -1,15 +1,33 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:id="@+id/activity_main"
-    android:padding="16dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+   android:layout_width="match_parent"
+   android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <com.craftman.cardform.CardForm
-        android:id="@+id/cardform"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="70dp"
+       android:background="@color/colorGreen"
+       android:text="Add a Payment"
+       android:textColor="@color/colorWhite"
+       android:gravity="center"
+       android:textSize="@dimen/subheader_text_size"/>
 
-</RelativeLayout>
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:paddingBottom="@dimen/activity_vertical_margin"
+       android:paddingLeft="@dimen/activity_horizontal_margin"
+       android:id="@+id/activity_main"
+       android:padding="16dp">
+
+      <com.braintreepayments.cardform.view.CardForm
+          android:id="@+id/card_form"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
+
+   </RelativeLayout>
+
+
+
+
+</LinearLayout>
