--- a/app/src/main/res/layout/activity_first_time_user.xml
+++ b/app/src/main/res/layout/activity_first_time_user.xml
@@ -50,7 +50,8 @@
         <EditText
             android:id="@+id/EditTextEmail"
             android:layout_width="match_parent"
-            android:inputType="textEmailAddress"
+            android:inputType="none"
+            android:editable="false"
             android:maxLines="1"
             android:singleLine="true"
             android:layout_height="wrap_content"/>
