--- a/app/src/main/res/layout/activity_first_time_user.xml
+++ b/app/src/main/res/layout/activity_first_time_user.xml
@@ -51,6 +51,7 @@
             android:id="@+id/EditTextEmail"
             android:layout_width="match_parent"
             android:inputType="none"
+            android:textColorHint="@color/colorDarkGrey"
             android:editable="false"
             android:maxLines="1"
             android:singleLine="true"
@@ -74,12 +75,25 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:text="Home Address"/>
+
         <EditText
             android:id="@+id/EditTextAddress"
             android:layout_width="match_parent"
             android:maxLines="1"
             android:singleLine="true"
             android:layout_height="wrap_content"/>
+
+        <!--
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText android:id="@+id/EditTextAddress"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:singleLine="true"
+                android:maxLines="1"/>
+        </android.support.design.widget.TextInputLayout>
+        -->
 
         <TextView
             android:layout_width="wrap_content"
