--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,6 +14,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/nav_header_profile_photo"
         android:layout_width="70dp"
+        android:clickable="true"
         android:layout_height="70dp"
         android:src="@drawable/golden"
         />
