--- a/app/src/main/res/layout/activity_request_ride.xml
+++ b/app/src/main/res/layout/activity_request_ride.xml
@@ -72,6 +72,7 @@
             android:layout_height="100dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
+            android:onClick="MapPlacePicker"
             android:paddingStart="40dp"
             android:paddingLeft="40dp"
             android:paddingEnd="@dimen/activity_horizontal_margin"
@@ -116,6 +117,7 @@
             android:layout_height="100dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
+            android:onClick="MapPlacePicker"
             android:paddingStart="40dp"
             android:paddingLeft="40dp"
             android:paddingEnd="@dimen/activity_horizontal_margin"
