Added Place Picker

--- a/app/src/main/res/layout/activity_request_ride.xml
+++ b/app/src/main/res/layout/activity_request_ride.xml
@@ -72,7 +72,7 @@
             android:layout_height="100dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
-            android:onClick="MapPlacePicker"
+            android:id="@+id/view_start_box"
             android:paddingStart="40dp"
             android:paddingLeft="40dp"
             android:paddingEnd="@dimen/activity_horizontal_margin"
@@ -98,7 +98,7 @@
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@id/pickup_location_icon"
                 android:layout_toEndOf="@id/pickup_location_icon"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:id="@+id/tv_start_address"
                 android:textSize="@dimen/small_text_size"
                 android:textColor="@color/colorWhite" />
@@ -117,7 +117,7 @@
             android:layout_height="100dp"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
-            android:onClick="MapPlacePicker"
+            android:id="@+id/view_end_box"
             android:paddingStart="40dp"
             android:paddingLeft="40dp"
             android:paddingEnd="@dimen/activity_horizontal_margin"
@@ -142,9 +142,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:gravity="center_vertical"
+                android:text="Pick a Destination"
                 android:id="@+id/tv_end_address"
-                android:text="456 Placeholder Ave\n C3B 2A1 Canada"
                 android:layout_toRightOf="@id/destination_icon"
                 android:layout_toEndOf="@id/destination_icon"
                 android:textSize="@dimen/small_text_size"
