--- a/app/src/main/res/layout/activity_successfully_booked.xml
+++ b/app/src/main/res/layout/activity_successfully_booked.xml
@@ -18,10 +18,12 @@
                 android:id="@+id/button_close"
                 android:clickable="true"
                 android:onClick="CloseScreen"
+                android:contentDescription="@string/close_image_description"
                 android:tint="@color/colorWhite"
                 android:layout_gravity="end"
                 android:layout_marginTop="16dp"
-                android:layout_marginRight="16dp"/>
+                android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"/>
 
 
             <TextView
@@ -29,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:gravity="center_horizontal"
-                android:text="Sit tight\n Your ride is on its way!"
+                android:text="@string/ride_requested"
                 android:textColor="@color/colorWhite"
                 android:textSize="34dp"
                 android:layout_marginBottom="24dp"/>
@@ -45,6 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:layout_marginLeft="20dp"
                     android:gravity="center"
                     android:text="321 Placeholder Sreet, Unit 99"
                     android:layout_margin="10dp"
@@ -56,6 +59,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/icon_arrow_down"
+                        android:contentDescription="@string/down_arrow_description"
                         android:tint="@color/colorWhite"
                         android:layout_gravity="center"/>
 
@@ -97,7 +101,7 @@
 
             <Button
                 android:layout_width="200dp"
-                android:text="Track My Ride"
+                android:text="@string/track_ride"
                 android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center"
