--- a/app/src/main/res/layout/activity_first_time_user.xml
+++ b/app/src/main/res/layout/activity_first_time_user.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:text="Edit Profile"
+        android:text="@string/edit_profile"
         android:gravity="center"
         android:background="@color/colorBlue"
         android:textColor="@color/colorWhite"
@@ -30,7 +30,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Full Name"
+            android:text="@string/full_name"
             android:layout_marginTop="6dp"
             />
         <EditText
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="Email"/>
+            android:text="@string/e_mail"/>
         <EditText
             android:id="@+id/EditTextEmail"
             android:layout_width="match_parent"
@@ -61,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="Phone"/>
+            android:text="@string/phone"/>
         <EditText
             android:id="@+id/EditTextPhone"
             android:singleLine="true"
@@ -74,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="Home Address"/>
+            android:text="@string/home_address"/>
 
         <EditText
             android:id="@+id/EditTextAddress"
@@ -99,7 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
-            android:text="Company"/>
+            android:text="@string/company"/>
         <Spinner
             android:id="@+id/SpinnerCompany"
             android:layout_width="match_parent"
@@ -113,7 +113,7 @@
             android:layout_margin="20dp"
             android:layout_gravity="center"
             android:background="@drawable/format_curved_edge_button_bw"
-            android:text="Save"
+            android:text="@string/save"
             android:padding="@dimen/button_padding"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
