--- a/app/src/main/res/layout/activity_legal.xml
+++ b/app/src/main/res/layout/activity_legal.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Legal"
+        android:text="@string/legal"
         android:textSize="20dp"
         android:textAlignment="center"
         android:textColor="@color/colorBlack"
