--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,7 @@
         android:id="@+id/main_screen_photo"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:contentDescription="@string/company_logo_description"
         android:background="@drawable/icon_logo"
         android:elevation="4dp"
         android:layout_marginTop="50dp"
@@ -55,7 +56,7 @@
                 android:drawableLeft="@drawable/icon_username"
                 android:drawableStart="@drawable/icon_username"
                 android:drawableTint="@color/colorBlack"
-                android:hint="E-mail"
+                android:hint="@string/e_mail"
                 android:inputType="textEmailAddress"
                 android:textColorHint="@color/colorGrey" />
             <EditText
@@ -66,7 +67,7 @@
                 android:drawableLeft="@drawable/icon_lock"
                 android:drawableStart="@drawable/icon_lock"
                 android:drawableTint="@color/colorBlack"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:textColorHint="@color/colorGrey"
                 android:inputType="textPassword" />
 
@@ -76,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:paddingTop="5dp"
-                android:text="Forgot Password?"
+                android:text="@string/forgot_password"
                 android:textColor="@color/colorGrey" />
 
             <Button
@@ -88,7 +89,7 @@
                 android:layout_marginLeft="70dp"
                 android:layout_marginRight="70dp"
                 android:background="@drawable/format_curved_edge_button_bw"
-                android:text="Login"
+                android:text="@string/login"
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/medium_button_text_size" />
@@ -97,7 +98,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
-                android:text="No account yet? Create one"
+                android:text="@string/create_new_account"
                 android:gravity="center"
                 android:textSize="16sp"/>
 
