--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -7,7 +7,7 @@
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorGreen"
-       android:text="Add a Payment"
+       android:text="@string/add_payment"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:textSize="@dimen/subheader_text_size"/>
@@ -24,6 +24,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
           android:id="@+id/paymentphoto"
+          android:contentDescription="@string/credit_card_description"
           android:src="@drawable/icon_credit_card"
           android:layout_centerInParent="true"
           android:layout_alignParentTop="true"/>
