--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Shuttlr Demo"
+            android:text="@string/app_name"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
             android:textColor="@color/colorGrey"
@@ -39,6 +39,7 @@
         android:paddingRight="24dp">
 
         <ImageView android:src="@drawable/icon_car_wifi"
+            android:contentDescription="@string/car_image_description"
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_marginBottom="24dp"
@@ -47,7 +48,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New User Registration"
+            android:text="@string/new_user_title"
             android:textStyle="bold"
             android:textColor="@color/colorBlack"
             android:gravity="center"
@@ -66,7 +67,7 @@
                 android:inputType="textEmailAddress"
                 android:singleLine="true"
                 android:maxLines="1"
-                android:hint="Email" />
+                android:hint="@string/email" />
         </android.support.design.widget.TextInputLayout>
 
         <!--  Name Label -->
@@ -81,7 +82,7 @@
                 android:singleLine="true"
                 android:maxLines="1"
                 android:inputType="textCapWords"
-                android:hint="Name" />
+                android:hint="@string/name" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password Label -->
@@ -96,7 +97,7 @@
                 android:singleLine="true"
                 android:maxLines="1"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="@string/password"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -110,7 +111,7 @@
                 android:singleLine="true"
                 android:maxLines="1"
                 android:inputType="textPassword"
-                android:hint="Confirm Password"/>
+                android:hint="@string/confirm_password"/>
         </android.support.design.widget.TextInputLayout>
 
         <!-- Create Account Button -->
@@ -121,13 +122,13 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="Create Account"/>
+            android:text="@string/create_account"/>
 
         <TextView android:id="@+id/link_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="Already a member? Login"
+            android:text="@string/already_member"
             android:gravity="center"
             android:textSize="16sp"/>
 
