--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,44 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="30dp"
-    android:layout_marginRight="30dp"
-    android:orientation="vertical"
-    android:paddingTop="30dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/settings"
-        android:textSize="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/colorBlack"
-        />
-    <View
-        android:layout_margin="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorDarkGrey"/>
-
-
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Allow users to set preferences"
-        android:textSize="20dp"
-        android:textAlignment="center"
-        android:textColor="@color/colorBlack"/>
-
-    <TextView
-        android:layout_marginTop="50dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:textStyle="bold"
-        android:elevation="5dp"
-        android:text="UNDER CONSTRUCTION"
-        android:gravity="center"
-        android:textSize="36sp"/>
-</LinearLayout>
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="com.accmxxgmail.shuttlrdemo.SettingsFragment"
+    android:id="@+id/weather_settings_fragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
