--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="colorYellow">#FFFF00</color>
     <color name="background_material_light">#fafafa</color>
     <color name="foreground_material_light_1">#fefefe</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
